<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<android.support.design.widget.AppBarLayout-->
        <!--android:id="@+id/appbar"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="56dp"-->
        <!--android:fitsSystemWindows="true"-->
        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">-->

        <!--<android.support.design.widget.CollapsingToolbarLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimaryDark" />
        <!--</android.support.design.widget.CollapsingToolbarLayout>-->
    <!--</android.support.design.widget.AppBarLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <RelativeLayout
            android:id="@+id/start_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp"
            >

            <TextView
                android:text="@string/start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/main_item_text" />


            <TextView
                android:id="@+id/startDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/select"
                android:textColor="@color/colorTextPrimary" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/main_item_text" />


            <TextView
                android:id="@+id/endDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/select"
                android:textColor="@color/colorTextPrimary" />


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#efefef" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/main_item_text" />

            <android.support.v7.widget.AppCompatAutoCompleteTextView
                android:id="@+id/search_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#efefef" />

        <RelativeLayout
            android:id="@+id/end_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/sort_by_nearest"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/main_item_text" />


            <CheckBox
                android:id="@+id/nearest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorTextPrimary" />


        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/apply_filter"
                android:textSize="@dimen/main_item_text"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/clear_filters"
                android:textSize="@dimen/main_item_text"
                android:textStyle="bold" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>