<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBgMain"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/headingTextColor"
            android:textSize="@dimen/main_heading"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/eventList"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#FEFEFE"
            app:cardCornerRadius="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:text="@string/events"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/main_item_text"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="3dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_arrow_right" />
                </RelativeLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:id="@+id/supplierList"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            app:cardBackgroundColor="#FEFEFE"
            app:cardCornerRadius="6dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:text="@string/medi_supplier"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/main_item_text"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="3dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:src="@drawable/ic_arrow_right" />


                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/english"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"

            android:text="@string/english"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/main_item_text" />

        <TextView
            android:id="@+id/arabic"
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/arabic"
            android:textSize="@dimen/main_item_text" />

    </LinearLayout>
</LinearLayout>